@@ -3,7 +3,7 @@
 use ExtUtils::MakeMaker;
 WriteMakefile(
     'NAME'      => 'Tk::TextANSIColor',
-    'VERSION'   => '0.14',
+    'VERSION'   => '0.15',
     'PREREQ_PM' => { 
 	Term::ANSIColor => '1.00',
 	Tk => 0,
@@ -12,6 +12,6 @@ WriteMakefile(
     'dist'      => { COMPRESS => "gzip -9f"},
     ($] >= 5.005 ?    ## Add these new keywords supported since 5.005
      (ABSTRACT_FROM => 'TextANSIColor.pm',
-      AUTHOR     => 'Tim Jenness <t.jenness@jach.hawaii.edu>') : ()),
+      AUTHOR     => 'Tim Jenness <tjenness@cpan.org>') : ()),
     );
 
